syntax = "proto2";

package nbs;

import "google/protobuf/duration.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/clients/nbs/config";

////////////////////////////////////////////////////////////////////////////////

message Zone {
    repeated string Endpoints = 1;
}

message GrpcKeepAliveConfig {
    optional string Time = 1 [default = "10s"];
    optional string Timeout = 2 [default = "1s"];
    optional bool PermitWithoutStream = 3 [default = true];
}

message ClientConfig {
    map<string, Zone> Zones = 1;
    optional string RootCertsFile = 2;
    optional bool Insecure = 3;
    optional bool DisableAuthentication = 4;
    required GrpcKeepAliveConfig GrpcKeepAlive = 5;
    optional string DurableClientTimeout = 6 [default = "20s"];
    optional string DiscoveryClientHardTimeout = 7 [default = "30s"];
    optional string DiscoveryClientSoftTimeout = 8 [default = "15s"];
}
